src/main/resources/manifests/disco-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disco-service-deployment-latest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: disco-service
  template:
    metadata:
      labels:
        app: disco-service
    spec:
      containers:
        - name: disco-service-container
          image: docker.io/rafaelmmurga/disco-service:latest
          ports:
            - containerPort: 8080
