src/main/resources/manifests/disco-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: disco-service-service-dev
spec:
  selector:
    app: disco-service-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
